feat: start adding registration structure + update icon

--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 @import 'tailwindcss/utilities';
 
 :root {
-  --primary-bg-color: #592986;
+  --primary-bg-color: #4379F2;
   --secondary-bg-color: black;
 }
 
